--- a/_sass/_defaults.scss
+++ b/_sass/_defaults.scss
@@ -9,7 +9,7 @@ body {
     position: relative;
 	background: #000;
 	margin: 0;
-	font-family: "proxima-nova", sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 1em;
 	font-weight: 600;
 	color: lighten($blue, 40%);
