--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -6,7 +6,7 @@
 @import "vars"; // colours, sizes, font names, etc
 
 // bring my fonts
-// "proxima-nova" 300, 400, 600, 700, 800
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800');
 
 
 // third-party
