--- a/_sass/_classes.scss
+++ b/_sass/_classes.scss
@@ -19,7 +19,11 @@
 
 }
 .huge {
-    font-size: 3.5em;
+    font-size: 2em;
+    @media screen and (min-width: 800px) { 
+        font-size: 3.5em;
+    }
+    
     font-weight: 800;
 }
 .label {
