--- a/_sass/_classes.scss
+++ b/_sass/_classes.scss
@@ -3,11 +3,14 @@
     height: 100vh;
 }
 .app {
-    padding: $spacer;
+    
     //max-width: 1280px;
     display: table;
     width: 100%;
     text-align: center;
+    @media screen and (min-width: 800px) { 
+        padding: $spacer;
+    }
     .canvas {
         display: table-cell;
         vertical-align: middle;
